# calculator-testing-principles

./: Movie-Database.postman_collection.json  README.md  creatation_script.sql  pyproject.toml  requirments.txt
app/: main.py
app/data/: access.py  actors.py  directors.py  movies.py  producers.py
app/domain/: actors.py  directors.py  helper_methods.py  movies.py  producers.py
app/endpoints/: actors.py  directors.py  movies.py  producers.py
app/schemas/: requests.py  responses.py
test.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/test_domain/: test_helper_methods.py  test_movies.py
